@@ -18,7 +18,7 @@ use \LAMCfgMain;
 /*
 
   This code is part of LDAP Account Manager (http://www.ldap-account-manager.org/)
-  Copyright (C) 2011 - 2021  Roland Gruber
+  Copyright (C) 2011 - 2022  Roland Gruber
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -58,6 +58,7 @@ if (isset($_GET['selfservice'])) {
 
 // return standard JSON response if session expired
 if (startSecureSession(false, true) === false) {
+	Ajax::setHeader();
 	echo json_encode(array(
 		'sessionExpired' => "true"
 	));
@@ -181,7 +182,7 @@ class Ajax {
 	/**
 	 * Sets JSON HTTP header.
 	 */
-	private static function setHeader() {
+	public static function setHeader() {
 		if (!headers_sent()) {
 			header('Content-Type: application/json; charset=utf-8');
 		}
